# bas-style-kit-jinja-templates

./: .flake8  .gitignore  .gitlab-ci.yml  .snyk  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
bas_style_kit_jinja_templates/: __init__.py
bas_style_kit_jinja_templates/templates/includes/: body--analytics-script.j2  body--back-to-top.j2  bsk--body--standard-footer.j2  bsk--footer--back-to-top.j2  bsk--footer--governance.j2  bsk--footer--is-something-wrong.j2  bsk--footer--policy-links.j2  bsk--head--favicon.j2  bsk--header--cookie-notice.j2  bsk--header--site-development-phase.j2  bsk--header--site-navigation.j2  head--core-metadata.j2  head--core-styles.j2  head--seo-metadata.j2
bas_style_kit_jinja_templates/templates/layouts/: bsk_base.j2  bsk_standard.j2  html.j2
bas_style_kit_jinja_templates/templates/macros/: bsk--nav.j2
bas_style_kit_jinja_templates/templates/patterns/: bsk_page-not-found.j2  bsk_problem-with-service.j2  bsk_service-unavailable.j2  bsk_sign-in-microsoft.j2  bsk_start.j2
src/bas_style_kit_jinja_templates/: __init__.py
src/bas_style_kit_jinja_templates/templates/includes/: body--analytics-script.j2  body--back-to-top.j2  body--core-scripts.j2  (+5 more)
support/python-packaging/: parse_version.py
templates/: basic.j2  html.j2  index.j2
templates/bas-style-kit/includes/: body--analytics-script.j2  body--back-to-top.j2  body--core-scripts.j2  head--core-styles.j2  head--seo-metadata.j2
templates/bas-style-kit/layouts/: blank.j2  html.j2
templates/features/: active_nav_item.j2  analytics.j2
templates/layouts/: blank.j2  bsk_base.j2  bsk_standard.j2  html.j2
templates/patterns/: bsk_item-type-header.j2  bsk_orcid.j2  bsk_page-not-found.j2  bsk_problem-with-service-alternative.j2  bsk_problem-with-service-basic.j2  bsk_problem-with-service.j2  bsk_service-unavailable-alternative.j2  bsk_service-unavailable-availability.j2  bsk_service-unavailable-basic.j2  bsk_service-unavailable-closed.j2  bsk_service-unavailable-partly-closed.j2  bsk_service-unavailable-replaced.j2  bsk_service-unavailable.j2  bsk_sign-in-microsoft.j2  bsk_start-basic.j2  bsk_start-info.j2  bsk_start-sign-in-microsoft.j2  bsk_textarea-markdown.j2
(+7 files in other folders)
