[tool.poetry]
name = "bas-style-kit-jinja-templates"
version = "0.0.0"
license = "MIT"
description = "A set of Jinja2 templates implementing the BAS Style Kit"
authors = [
  "Felix Fennell <felnne@bas.ac.uk>"
]
readme = "README.md"
homepage = "https://github.com/antarctica/bas-style-kit-jinja-templates"
repository = "https://github.com/antarctica/bas-style-kit-jinja-templates"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.6"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^22.1.11"
flake8-builtins = "^1.5.3"
flake8-import-order = "^0.18.1"
flake8-use-fstring = "^1.3"
Flask = "^2.0.2"
safety = "^1.10.3"
tomlkit = "^0.8.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = ''

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
